reconfigured logging to: - log json to console, and - disable gelf logging

--- a/deployments/components/patches/configs/logging/patch.yaml
+++ b/deployments/components/patches/configs/logging/patch.yaml
@@ -1,5 +1,10 @@
 - op: add
   path: "/spec/template/spec/containers/0/envFrom/-"
   value:
-    configMapRef:
-      name: gelf-config
+    name: GELF_ENABLED
+    value: false
+- op: add
+  path: "/spec/template/spec/containers/0/env/-"
+  value:
+    name: CONSOLE_LOG_JSON
+    value: 'true'
