--- a/deployments/bases/elk/logstash/logstash.conf
+++ b/deployments/bases/elk/logstash/logstash.conf
@@ -4,6 +4,26 @@ input {
   }
 }
 
+filter {
+  if [message] =~ /^\{.*\}$/ {
+    json {
+      source => "message"
+      skip_on_invalid_json => true
+    }
+  }
+
+  ruby {
+    code => '
+      event.get("mdc").each { |k, v|
+        event.set(k,v)
+      } unless event.get("mdc").nil?
+      event.remove("mdc") unless event.get("mdc").nil?
+    '
+  }
+}
+
+
+
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
