simplified deployment by removing POD_NAME and setting APP_NAME through a fieldRef

--- a/deployments/bases/app/deployment.yaml
+++ b/deployments/bases/app/deployment.yaml
@@ -13,8 +13,8 @@ spec:
           env:
             - name: QUARKUS_HTTP_PORT
               value: '8080'
-            - name: POD_NAME
+            - name: APP_NAME
               valueFrom:
                 fieldRef:
-                  fieldPath: metadata.name
+                  fieldPath: metadata.labels['app.kubernetes.io/name']
           envFrom: []
